[package]
name = "puppetmux"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
